refactor: migrate to Java 8